Bug 1708670 - nsIEditor.pasteTransferable won't insert image/png if nsITransaferable uses nsIInputStream. r=masayuki

editor.pastedTransferable cannot insert image/png when using nsITransaferable.

Although pastedTransferable stores DataTransfer in stack, when mime type is
image/png, DataTransfer fetches all data in
DataTransferItem::FillInExternalData then stores it as `KIND_FILE`.
It means that nsIInputStream in nsITransferable is already EOF.

So we should use InsertFromDataTransfer when internal data moves to
DataTransfer.

Differential Revision: https://phabricator.services.mozilla.com/D114702